--- a/sass/page/homePage/_homePage.scss
+++ b/sass/page/homePage/_homePage.scss
@@ -1,4 +1,7 @@
-  // ********************* DÉBUT HOME PAGE ***********************/
+// Import variable color : 
+@use "../../utils/variable";
+
+// ********************* DÉBUT HOME PAGE ***********************/
 
   // Début de la font :
   @font-face {
@@ -6,6 +9,73 @@
     src: url("/fonts/polices/Inter/static/Inter-Light.ttf") format("truetype");
   }  
   // Fin de la font :
+
+  // Début Loader :
+  .loader {
+    @keyframes loader {
+      100% {
+          opacity: 0;
+          z-index: -10;
+      }
+    } 
+    animation: loader 0.2s;
+    animation-delay: 2s;
+    animation-fill-mode: both;
+    align-items:center;
+    background-color: variable.$primary;
+    opacity: 0.9;
+    display:flex;
+    height: 100%;
+    justify-content:center;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+
+    &__itemContainer {
+      display: flex;
+      justify-content: space-between;
+      width: 200px;
+
+      &__item {
+        @keyframes jump {
+          0% {
+            transform: translateY(0);
+          }
+          25% {
+            transform: translateY(0.5rem);
+          }
+          75% {
+            transform: translateY(-0.5rem);
+          }
+          100% {
+            transform: translateY(0);
+          }
+        }
+        animation-iteration-count: 1;
+        animation: jump 1s;
+        border-radius: 40px;
+        height: 35px;
+        width: 35px;
+      
+        &--1 {
+          background-color: variable.$secondary;
+        }
+      
+        &--2 {
+          animation-delay: 0.25s;
+          background-color: variable.$tertiary;
+        }
+      
+        &--3 {
+          animation-delay: 0.5s;
+          background-color: variable.$quaternary;
+        }
+      }
+    }
+  }
+  // Fin Loader :
 
   // Début Header :
   .container__header__homepage {
@@ -15,7 +85,7 @@
     align-items: center;
     gap: 30px;
     margin: 30px;
-    background-color: #ffff;
+    background-color: variable.$primary;
   
     & img {
       width: 100%;
@@ -32,7 +102,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #eaeaea;
+      background-color: variable.$quinary;
       gap: 15px;
       padding: 20px;
       width: 100%;
@@ -44,7 +114,7 @@
   
       & p {
         font-size: 18px;
-        color: #353535;
+        color: variable.$senary;
         font-weight: 500;
         text-align: center;
         font-family: "Inter", sans-serif;
@@ -58,13 +128,13 @@
       justify-content: center;
       align-items: center;
       gap: 30px;
-      background-color: #f7f7f7;
+      background-color: variable.$septenary;
       padding: 30px 30px;
       width: 100%;
   
       & h1 {
         font-size: 40px;
-        color: #000000;
+        color: variable.$octonary;
         font-weight: 600;
         text-align: center;
         font-family: "Inter", sans-serif;
@@ -76,7 +146,7 @@
   
       & p {
         font-size: 18px;
-        color: #343535;
+        color: variable.$senary;
         font-weight: 300;
         text-align: center;
         font-family: "Inter", sans-serif;
@@ -87,15 +157,14 @@
         padding: 17px 23px 17px 23px;
         border-radius: 25px;
         font-size: 16px;
-        color: #ffff;
+        color: variable.$primary;
         font-family: "Inter", sans-serif;
         background: linear-gradient(
           to top,
-          rgba(147, 86, 220, 0.9),
-          rgba(255, 121, 218, 0.9)
+          variable.$nonary
         );
         text-align: center;
-        box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+        box-shadow: 0.25rem 0.25rem 10px variable.$denary;
         cursor: pointer;
       }
     }
@@ -103,7 +172,7 @@
   
     // Début Section 2 :
     &__section2 {
-      background-color: #ffff;
+      background-color: variable.$primary;
       margin: 70px 70px;
   
       @media (max-width: 973px) {
@@ -112,7 +181,7 @@
   
       & h2 {
         font-size: 25px;
-        color: #000000;
+        color: variable.$octonary;
         font-weight: 600;
         margin-bottom: 50px;
         font-family: "Inter", sans-serif;
@@ -130,9 +199,9 @@
           justify-content: center;
           align-items: center;
           gap: 20px;
-          background-color: #f7f7f7;
+          background-color: variable.$septenary;
           border-radius: 25px;
-          box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+          box-shadow: 0.25rem 0.25rem 10px variable.$denary;
           padding: 25px 95px;
           position: relative;
   
@@ -151,8 +220,8 @@
           & span {
             position: absolute;
             left: -15px;
-            background-color: #9356db;
-            color: #ffff;
+            background-color: variable.$undenary;
+            color: variable.$primary;
             font-size: 15px;
             font-weight: 600;
             padding: 5px 10px 5px 10px;
@@ -161,12 +230,12 @@
           }
   
           & img {
-            color: #7E7E7E;
+            color: variable.$duodenary;
             object-fit: cover;
           }
   
           & p {
-            color: #000000;
+            color: variable.$octonary;
             font-size: 16px;
             font-weight: 500;
             font-family: "Inter", sans-serif;
@@ -178,7 +247,7 @@
   
     //Début Section 3 :
     &__section3 {
-      background-color: #f7f7f7;
+      background-color: variable.$septenary;
       padding: 35px 70px 110px 70px;
       gap: 50px;
   
@@ -188,7 +257,7 @@
     
       & h2 {
         font-size: 25px;
-        color: #000000;
+        color: variable.$octonary;
         font-weight: 600;
         margin-bottom: 50px;
         font-family: "Inter", sans-serif;
@@ -205,9 +274,13 @@
           border-radius: 10px 10px 10px 10px;
           width: 600px;
           height: 280px;
-          background-color: #ffff !important;
-          cursor: pointer;
+          background-color: variable.$primary !important;
           position: relative;
+          cursor: pointer;
+
+          &:hover {
+            transform: scale(1.1);
+          }
   
           @media (max-width: 1439px) {
             width: 100%;
@@ -224,7 +297,7 @@
             }
       
             & span {
-              background-color: #99e2d0;
+              background-color: variable.$tredecimary;
               color: #008766;
               font-weight: 500;
               font-size: 17px;
@@ -248,7 +321,7 @@
                 
                 & h3 {
                   font-size: 18px;
-                  color: #000000;
+                  color: variable.$octonary;
                   font-weight: 700;
                   font-family: "Inter", sans-serif;
                 }
@@ -256,7 +329,7 @@
                 & p {
                   font-size: 17px;
                   font-weight: 300;
-                  color: #000000;
+                  color: variable.$octonary;
                   font-family: "Inter", sans-serif;
                 }
               }
@@ -268,12 +341,12 @@
       
                & i {
                 font-size: 30px;
-                color: #000000;
+                color: variable.$octonary;
                }    
       
                & i:hover {
                 font-weight: 600;
-                color: #BB64DC;
+                color: variable.$quattuordecimary;
                 transform: scale(1.1);
                 transition-delay: 0.2s;
                }
@@ -287,7 +360,7 @@
   
     // Début du footer : 
     .container__homepage__footer {
-      background-color: #353535;
+      background-color: variable.$senary;
       padding: 30px 25px;
       display: flex;
       flex-direction: row;
@@ -322,11 +395,11 @@
           gap: 10px;
   
           & img {
-            color: #ffff;
+            color: variable.$primary;
             object-fit: cover;
           }
           & p {
-            color: #ffff;
+            color: variable.$primary;
             font-family: "Inter", sans-serif;
           }
         }
@@ -345,7 +418,7 @@
         }
   
         & p {
-          color: #ffff;
+          color: variable.$primary;
           font-family: "Inter", sans-serif;
         }
       }
@@ -370,5 +443,5 @@
   }
   // Fin du Main
   
-  // ********************* FIN HOME PAGE ***********************/
+// ********************* FIN HOME PAGE ***********************/
   
